[package]
name = "advanced-waf"
version = "1.0.0"
edition = "2021"

[dependencies]
pingora = { git = "https://github.com/cloudflare/pingora", branch = "main", features = ["lb", "openssl"] }
pyo3 = { version = "0.23", features = ["auto-initialize", "macros"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
dashmap = "6.0"
log = "0.4"
env_logger = "0.11"
serde_json = "1.0"
chrono = "0.4"
anyhow = "1.0"
regex = "1.10"
